Project now builds ass a sub-module of spark